...
    @Query private var recordings: [Recording]
    #endif

    var body: some View {
        Group {
            if isOnboarded {
                library
            } else {
                OnboardingView {
                    AppPreferences.setOnboardingCompleted(true)
                    withAnimation { isOnboarded = true }
                }
            }
...
